assign & remove roles
